--- a/main_page_styles.css
+++ b/main_page_styles.css
@@ -6,6 +6,7 @@
 	background-color: red;
 	margin: 0px;
 	padding: 0px;
+	font-size: 3vh;
 }
 
 header, footer {
@@ -27,7 +28,7 @@ main {
 }
 .left-center > h3{
 	background-color: white;
-	min-width: 150px;
+	min-width: 250px;
 	padding: 5px;
 	margin-right: 16px;
 }
@@ -64,7 +65,7 @@ main {
 
 .section4 {
 	width: 25%;
-	font-size: 30px;
+	font-size: 5vh;
     background-color: rgb(253, 233, 217);
 }
 .item-right {
@@ -82,7 +83,4 @@ main {
 
 .border {
 	outline: 1px solid black;
-}
-.links-list {
-	font-size: 20px;
 }
