--- a/main_page_styles.css
+++ b/main_page_styles.css
@@ -1,8 +1,6 @@
 .body_style {
 	display: flex;
 	flex-direction: column;
-	width: 100vw;
-	height: 100vh;
 	background-color: red;
 	margin: 0px;
 	padding: 0px;
@@ -10,11 +8,10 @@
 }
 
 header, footer {
-	height: 15%;
 	background-color: rgb(198, 217, 241);
+	block-size: fit-content;
 }
 main {
-	height: 70%;
 	background-color: green;
 	display: flex;
 }
@@ -37,37 +34,35 @@ header>p{
 
 
 .section235 {
+	display: flex;
+	flex-direction: column;
 	width: 75%;
 	background-color: yellow;
 }
 .section23 {
+	flex: 1;
 	width: 100%;
-	height: 80%;
 	display: flex;
 }
 .section2 {
 	width: 40%;
-	height: 100%;
 	background-color: rgb(253, 233, 217);
 }
 .section3 {
 	width: 60%;
-    height: 100%;
     background-color: white;
-    display: flex;
-	flex-direction: row;
-    flex-wrap: wrap;
-    align-content: flex-end;
-    justify-content: center;
 }
-
+/*.section3>img{
+	display: block-inline;
+	margin-left: auto;
+}*/
 .section5 {
+	flex: 1;
 	width: 100%;
-	height: 20%;
 	background-color: rgb(234, 241, 221);
-	display: flex;
-	align-items: center;
-	padding: 1px 1px 1px 32px;
+}
+.section5>p {
+	margin: 1px 1px 1px 32px;
 }
 
 .section4 {
