--- a/main_page_styles.css
+++ b/main_page_styles.css
@@ -1,20 +1,24 @@
 .body_style {
-	display: flex;
-	flex-direction: column;
-	background-color: red;
-	margin: 0px;
-	padding: 0px;
-	font-size: 3vmin;
+    display: flex;
+    flex-direction: column;
+    background-color: red;
+    min-height: 100vh; 
+    margin: 0;
+    padding: 0;
+    font-size: 3vmin;
 }
 
 header, footer {
-	background-color: rgb(198, 217, 241);
-	block-size: fit-content;
+    background-color: rgb(198, 217, 241);
 }
+
 main {
-	background-color: green;
-	display: flex;
+    flex-grow: 1;
+    background-color: green;
+    display: flex;
 }
+
+
 header>p{
 	font-size: 2.25vmin;
 }
