--- a/main_page_styles.css
+++ b/main_page_styles.css
@@ -57,14 +57,14 @@ header>p{
     background-color: white;
     display: flex;
     align-items: flex-end;
+    align-content: space-around;
     flex-wrap: wrap;
 }
 .preview_img{
 	position: relative;
 	display: block-inline;
 	margin-left: auto;
-	height: 49%;
-	width: 49%;
+	max-width: 100%;
 	max-height: 300px;
 }
 .section5 {
